--- a/style.css
+++ b/style.css
@@ -48,17 +48,23 @@ html{
   }
 }
 
+span{
+  
+}
+
 body{
   margin: 50px 20px 50px 20px;
   background-color: #02066F;
 }
 
 .taehslogo{
+  display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 30px;
   width: 50%;
-  height: 100px;
-  width: 100px;
+  height: 150px;
+  width: 150px;
   background-color: white;
 }
 
@@ -72,6 +78,7 @@ marquee{
   font-size: 22px;
   color: #FFe21e;
   text-shadow: 2px 2px 8px #FFD700;
+  margin-bottom: 30px;
 }
 
 .edisonfrontdoor{
