--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html{
   font-family: "Chakra Petch", sans-serif;
   font-weight: 400;
   font-style: normal;
+  box-shadow: 2px 2px 8px #FFe21e;
 }
 
 .sidenav a {
@@ -99,7 +100,6 @@ marquee{
 }
 
 .clubslink {
-  background-color: #04AA6D;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -114,7 +114,7 @@ marquee{
 .dropdowncontent {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: #FFe21e;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -131,4 +131,4 @@ marquee{
 
 .clubdropdownmenu:hover .dropdowncontent {display: block;}
 
-.clubdropdownmenu:hover .clubslink {background-color: #3e8e41;}
+.clubdropdownmenu:hover .clubslink {background-color: #FFe21e;}
