👀🚏 Checkpoint ./.glitch-assets:65479926/569 ./index.html:65479926/17 ./style.css:65479926/21

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ marquee{
   display: block;
 }
 
-.dropdowncontent a:hover {background-color: #ddd;}
+.dropdowncontent a:hover {background-color: #FFEA5C;}
 
 .clubdropdownmenu:hover .dropdowncontent {display: block;}
 
